<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/register_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:hint="@string/Name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/Password"/>
    <EditText
        android:id="@+id/register_repassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/re_enter_password"/>

    <EditText
        android:id="@+id/register_phoneno"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/phone_number"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/Register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/gotAccount"/>

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:text="@string/login" />

    </LinearLayout>



</LinearLayout>