<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KitchenDashboard"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/kitch_viewCurrent"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/view_current_orders"/>

    <Button
        android:id="@+id/kitch_viewComplete"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/view_complete_orders"/>

    <Button
        android:id="@+id/kitch_editStock"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/edit_stock"/>

    <Button
        android:id="@+id/kitch_editWaitTime"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/edit_wait_time"/>
</LinearLayout>